--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ^3.5.2
 
 dependencies:
   flutter:
     sdk: flutter
   
-  cupertino_icons: ^1.0.2
-  fl_chart: ^0.61.0
+  cupertino_icons: ^1.0.8
+  fl_chart: ^0.69.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter  
-  flutter_lints: ^2.0.0
+  very_good_analysis: ^6.0.0
 
 flutter:
   uses-material-design: true
